syntax = "proto3";

option csharp_namespace = "Tuckfirtle.Core.Network.P2P.Packets";

enum KeyEncapsulationMechanismType {
  KEY_ENCAPSULATION_MECHANISM_TYPE_SIKE_P434_COMPRESSED = 0;
  KEY_ENCAPSULATION_MECHANISM_TYPE_SIKE_P503_COMPRESSED = 1;
  KEY_ENCAPSULATION_MECHANISM_TYPE_SIKE_P610_COMPRESSED = 2;
  KEY_ENCAPSULATION_MECHANISM_TYPE_SIKE_P751_COMPRESSED = 3;
}

enum HandshakeType {
  HANDSHAKE_TYPE_PUBLIC_KEY = 0;
  HANDSHAKE_TYPE_CIPHER_TEXT = 1;
}

message HandshakePacket {
  KeyEncapsulationMechanismType key_encapsulation_mechanism_type = 1;
  HandshakeType handshake_type = 2;
  bytes handshake_data = 3;
}